--- a/carrentalsystem/crcapp/templates/base.html
+++ b/carrentalsystem/crcapp/templates/base.html
@@ -36,8 +36,8 @@
                         <li class="nav-item active">
                           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item font-blue pt-2 ml-2">
-                          Welcome, John Doe
+                        <li class="nav-item font-blue pt-2 ml-2" style="text-transform: capitalize;">
+                          Welcome, {{ name }}
                         </li>
                         
                       </ul>
