added function to create new staff account when register is clicked (Still work in progress)

--- a/carrentalsystem/crcapp/templates/staff/create.html
+++ b/carrentalsystem/crcapp/templates/staff/create.html
@@ -299,7 +299,7 @@
                         <div class="col-md-6">
 							<div class="form-group">
 								<select class="custom-select" required>
-									<option value="">Open this select menu</option>
+									<option value="">Select a user type</option>
 									<option value="1">Manager</option>
 									<option value="2">Staff</option>
 									<option value="3">Developer</option>
