--- a/carrentalsystem/crcapp/templates/base.html
+++ b/carrentalsystem/crcapp/templates/base.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="{% static "css/bootstrap-timepicker.min.css" %}">
     <link rel="stylesheet" href="{% static "css/daterangepicker.css" %}">
     <link rel="stylesheet" href="{% static "css/jquery.dataTables.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/dataTables.bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/responsive.bootstrap.min.css" %}">
     <link rel="stylesheet" href="{% static "css/select2.min.css" %}">
 
     <!-- Fonts -->
@@ -80,8 +82,10 @@
   <script src="{% static "js/bootstrap-timepicker.min.js" %}" ></script>
   <script src="{% static "js/daterangepicker.js" %}" ></script>
   <script src="{% static "js/jquery.dataTables.min.js" %}" ></script>
-  <script src="{% static "js/dataTables.editor.min.js" %}" ></script>
-  <script src="{% static "select2.min.js" %}" ></script>
+  <script src="{% static "js/dataTables.bootstrap.min.js" %}" ></script>
+  <script src="{% static "js/dataTables.responsive.min.js" %}" ></script>
+  <script src="{% static "js/responsive.bootstrap.min.js" %}" ></script>
+  <script src="{% static "js/select2.min.js" %}" ></script>
   <script src="https://cdn.datatables.net/select/1.2.6/js/dataTables.select.min.js" ></script>
   <script src="https://cdn.datatables.net/buttons/1.5.2/js/dataTables.buttons.min.js" ></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js" ></script>
@@ -90,4 +94,6 @@
   <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.html5.min.js" ></script>
   <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.print.min.js" ></script>
   <script src="{% static "js/main.js" %}" ></script>
+  {% block scripts %}
+  {% endblock %}
 </html>
