Added staff creation and organised the folder structure

--- a/carrentalsystem/crcapp/templates/index.html
+++ b/carrentalsystem/crcapp/templates/index.html
@@ -34,7 +34,7 @@
               {% elif mtype == "i" %}
                 <div class="alert alert-info">
               {% endif %}
-                    <strong>Error: </strong>  {{ msg }}
+                    {{ msg }}
                   </div>
             {% endif %}
             <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
