--- a/carrentalsystem/crcapp/templates/staff/create.html
+++ b/carrentalsystem/crcapp/templates/staff/create.html
@@ -159,7 +159,7 @@
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group">
-                                                            <select class="custom-select" required>
+                                                            <select class="custom-select" name="state" required>
                                                                 <option value="">Select a State</option>
                                                                 <option value="NSW">New South Wales</option>                                                              
                                                                 <option value="NT">Northern Territory</option>
