--- a/carrentalsystem/crcapp/templates/customer/create.html
+++ b/carrentalsystem/crcapp/templates/customer/create.html
@@ -1,16 +1,42 @@
-{% block title %}Create Customer{% endblock %} 
-            {% block content %}
-			<form action="/create/customer" method="post">
+{% extends '../base.html' %}
+
+{% block title %}Create Customer{% endblock %}
+
+{% block breadcrumb %}
+    
+<li class="breadcrumb-item active" aria-current="page">Create Customer</li>
+{% endblock %}
+
+{% block content %}
+
+<!-- Error message box will be shown only if the msg variable has some value -->
+{% if msg != "" %}
+<div class="row"> 
+        <div class="col-md-12 col-sm-12">
+            <!-- Checking whether it is a danger type or info type needed for the box 
+                Will be checked by mtype is d or i 
+            -->
+            {% if mtype == "d" %}
+            <div class="alert alert-danger">
+            {% elif mtype == "i" %}
+            <div class="alert alert-info">
+            {% endif %}
+                {{ msg }}
+            </div>
+        </div>
+</div>    
+              
+{% endif %}
+
+<form action="/create/customer" method="post">
         {% csrf_token %}
         <div class="container">
-                <form class="form-horizontal" role="form" method="POST" action="/register">
-                    <div class="row">
-                        <div class="col-md-3"></div>
-                        <div class="col-md-6">
+                <div class="row">
+                        <div class="col-md-12 text-center">
                             <h2>Register New Customer</h2>
                             <hr>
                         </div>
-                    </div>
+                </div>
                     <div class="row">
                         <div class="col-md-3 field-label-responsive">
                             <label for="firstName">First Name</label>
@@ -122,19 +148,21 @@
                             <label for="state">State</label>
                         </div>
                         <div class="col-md-6">
-							<div class="form-group">
-								<select class="custom-select" required>
-									<option value="">Select a State</option>
-									<option value="1">New South Wales</option>
-									<option value="2">Queensland</option>
-                                    <option value="3">South Australia</option>
-                                    <option value="4">Tasmania</option>
-                                    <option value="5">Victoria</option>
-								</select>
-							</div>
+                            <div class="form-group">
+                                <select class="custom-select" name="state" required>
+                                    <option value="">Select a State</option>
+                                    <option value="NSW">New South Wales</option>                                                              
+                                    <option value="NT">Northern Territory</option>
+                                    <option value="QLD">Queensland</option>
+                                    <option value="SA">South Australia</option>
+                                    <option value="TS">Tasmania</option>
+                                    <option value="VIC">Victoria</option>          
+                                    <option value="WA">Western Australia</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
-					                    <div class="row">
+                    <div class="row">
                         <div class="col-md-3 field-label-responsive">
                             <label for="DriverLicenseNumber">Drivers License Number</label>
                         </div>
@@ -164,7 +192,7 @@
                                 <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                     <div class="input-group-addon" ></i></div>
                                     <!-- <input type="text" name="DOB" class="form-control" id="DOB"
-										   placeholder="date of Birth" required autofocus> -->
+                                            placeholder="date of Birth" required autofocus> -->
                                         <input data-date-format="dd/mm/yyyy" class="form-control"
                                         id="datepicker" placeholder="dd/mm/yyyy" required autofocus>
                                 </div>
@@ -295,18 +323,15 @@
                         <div class="col-md-3">
                             <button type="submit" class="btn btn-success"><i class="fa fa-user-plus"></i> Register</button>
                         </div>
-                        <div class="col-md-6">
-                            <button type="cancel" class="btn btn-danger"><i class="fas fa-ban"></i> Cancel</button>
-                        </div>
                     </div>
                 </form>
             </div>
   </form>
-            {% endblock %}
+{% endblock %}
             
 
 
-  {% block scripts %}
+{% block scripts %}
 <script type="text/javascript">
     $('#datepicker').datepicker({
         weekStart: 1,
