--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -73,7 +73,7 @@
                 <br>
              </div>
              <div class="col-md-3 col-sm-6 text-center">
-                <a href="">
+                <a href="customer/create">
                    <i class="fas fa-plus" style="font-size:36px;"></i>
                    <br>
                    <p>Insert Customer</p>
