Creating login management view
This includes a store search
Getting values from view as a JSON array
Dynamic populating datatable
Linking urls with parameters

--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -137,7 +137,7 @@
                     </a>
                  </div>
              <div class="col-md-3 col-sm-6 text-center">
-                    <a href="">
+                    <a href="staff/login">
                        <i class="fas fa-sign-in-alt" style="font-size:36px;"></i>
                        <br>
                        <p>Login Management</p>
