--- a/carrentalsystem/crcapp/static/css/style.css
+++ b/carrentalsystem/crcapp/static/css/style.css
@@ -69,3 +69,14 @@ a:hover{
 .breadcrumb{
     background-color: transparent !important;
 }
+
+.table th {
+    color:#4885ed !important;
+}
+
+.table, .table tr, .table .odd {
+    background-color: #fff !important;
+}
+.table thead, .table tfoot{
+    border-color: #4885ed !important;
+}
