Stylesheet changes with borders, added email layout and login staff view
Email layout and login staff view is not complete.

--- a/carrentalsystem/crcapp/static/css/style.css
+++ b/carrentalsystem/crcapp/static/css/style.css
@@ -80,3 +80,20 @@ a:hover{
 .table thead, .table tfoot{
     border-color: #4885ed !important;
 }
+
+.border-1{
+    border-width: 1px;
+    border-style: solid;
+}
+
+
+.border-2{
+    border-width: 2px;
+    border-style: solid;
+}
+
+
+.border-3{
+    border-width: 3px;
+    border-style: solid;
+}
