--- a/carrentalsystem/crcapp/templates/customer/create.html
+++ b/carrentalsystem/crcapp/templates/customer/create.html
@@ -217,7 +217,7 @@
 				<div class="form-group">
 					<div class="input-group mb-2 mr-sm-2 mb-sm-0">
 						<div class="input-group-addon"></i></div>
-						<input type="text" name="email" class="form-control" id="email"
+						<input type="email" name="email" class="form-control" id="email"
 							placeholder="you@example.com" required autofocus>
 					</div>
 				</div>
