linked homepage to booking order

--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -8,7 +8,7 @@
       <br>
    </div>
    <div class="col-md-3 col-sm-6 text-center">
-      <a href="">
+      <a href="booking/order">
          <i class="fas fa-shopping-cart" style="font-size:36px;"></i>
          <br>
          <p>Book Vehicle</p>
