Modified datatable to display correct name

--- a/carrentalsystem/crcapp/templates/staff/loginmanagementview.html
+++ b/carrentalsystem/crcapp/templates/staff/loginmanagementview.html
@@ -100,7 +100,7 @@
                     for(var i=0; i < result.length; i++ ){
                         rows += '<tr>'+
                                 '<td><a href="/staff/login/'+result[i]['pk']+'">'+result[i]['pk']+'</a></td>'+
-                                '<td>'+result[i]['fields']['firstName']+' '+result[i]['fields']['firstName']+'</td>'+
+                                '<td>'+result[i]['fields']['firstName']+' '+result[i]['fields']['lastName']+'</td>'+
                                 '<td>'+result[i]['fields']['email']+'</td>'+
                                 '<td>'+result[i]['fields']['userName']+'</td>'+
                                 '<td>'+result[i]['fields']['userType']+'</td>'+
