--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -130,7 +130,7 @@
                 </a>
              </div>
              <div class="col-md-3 col-sm-6 text-center">
-                    <a href="">
+                    <a href="staff/search">
                        <i class="fas fa-search" style="font-size:36px;"></i>
                        <br>
                        <p>Search Staff</p>
