--- a/carrentalsystem/crcapp/static/css/style.css
+++ b/carrentalsystem/crcapp/static/css/style.css
@@ -97,3 +97,11 @@ a:hover{
     border-width: 3px;
     border-style: solid;
 }
+.border-4{
+    border-width: 4px;
+    border-style: solid;
+}
+.border-5{
+    border-width: 5px;
+    border-style: solid;
+}
