--- a/carrentalsystem/crcapp/templates/base.html
+++ b/carrentalsystem/crcapp/templates/base.html
@@ -91,7 +91,7 @@
   <script src="{% static "js/dataTables.bootstrap.min.js" %}" ></script>
   <script src="{% static "js/dataTables.responsive.min.js" %}" ></script>
   <script src="{% static "js/responsive.bootstrap.min.js" %}" ></script>
-  <script src="{% static "js/select2.min.js" %}" ></script>
+  <script src="{% static "js/select2.min.js" %}" ></script>  
   <script src="https://cdn.datatables.net/select/1.2.6/js/dataTables.select.min.js" ></script>
   <script src="https://cdn.datatables.net/buttons/1.5.2/js/dataTables.buttons.min.js" ></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js" ></script>
@@ -99,6 +99,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js" ></script>
   <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.html5.min.js" ></script>
   <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.print.min.js" ></script>
+  <script src="{% static "js/html2canvas.min.js" %}" ></script>
+  <script src="{% static "js/jspdf.debug.js" %}" ></script>
   <script src="{% static "js/main.js" %}" ></script>
   {% block scripts %}
   {% endblock %}
