--- a/carrentalsystem/crcapp/templates/staff/loginmanagementview.html
+++ b/carrentalsystem/crcapp/templates/staff/loginmanagementview.html
@@ -85,7 +85,6 @@
         });
         
         $("#btnStore").click(function(){
-            
             $.ajax({
                 url: "/staff/store",
                 type : 'POST', 
@@ -107,13 +106,13 @@
                                 '<td>'+result[i]['fields']['dateJoined']+'</td>'+  
                                 '</tr>';
                     }
-
                     // adding the rows string to #records component to populate as HTML
                     $("#records").html(rows);
                     // showing the table
                     $("#dtView").show();
                     // datatable initialising
                         $('#tbl').DataTable({
+                            'retrieve': true,
                             'paging'      : true, // for pagination
                             'lengthChange': false,
                             'searching'   : true, //searching
