--- a/carrentalsystem/crcapp/templates/staff/search.html
+++ b/carrentalsystem/crcapp/templates/staff/search.html
@@ -22,8 +22,8 @@
                     <div class="form-group">
                         <select class="form-control select2 p-2" style="width:280px;" name="storeID" id="storeID" required>
                             <option value="">Select category</option>
-                            {% for s in stores %}
-                            <option value="{{ s.storeName }}">{{ s.storeName }}</option>
+                            {% for employee in employees %}
+                            <option value="{{ employee }}">{{ employee.name }}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -40,15 +40,25 @@
 <br>
 <div id="dtView" class="pt-4">
         <table id="tbl" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%;">
-                <caption>All registered users</caption>
+                <caption>All registered staff</caption>
               <thead>
               <tr>
                 <th>Employee ID</th>
-                <th>Name</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Street Address</th>
+                <th>City</th>
+                <th>Postal Code</th>
+                <th>State</th>
+                <th>DOB</th>
+                <th>TFN</th>
+                <th>Phone Number</th>
                 <th>Email</th>
                 <th>Username</th>
                 <th>User Type</th>
                 <th>Date Joined</th>
+                <th>Last Login</th>
+                <th>Store</th>
               </tr>
               </thead>
               <tbody id="records">
@@ -60,12 +70,22 @@
               </tbody>
               <tfoot>
               <tr>
-                    <th>Employee ID</th>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Username</th>
-                    <th>User Type</th>
-                    <th>Date Joined</th>
+                <th>Employee ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Street Address</th>
+                <th>City</th>
+                <th>Postal Code</th>
+                <th>State</th>
+                <th>DOB</th>
+                <th>TFN</th>
+                <th>Phone Number</th>
+                <th>Email</th>
+                <th>Username</th>
+                <th>User Type</th>
+                <th>Date Joined</th>
+                <th>Last Login</th>
+                <th>Store</th>
               </tr>
               </tfoot>
             </table>
@@ -116,6 +136,7 @@
                     
                     // datatable initialising
                         $('#tbl').DataTable({
+                            'retrieve': true,
                             'paging'      : true, // for pagination
                             'lengthChange': false,
                             'searching'   : true, //searching
@@ -123,7 +144,9 @@
                             'info'        : true,
                             'autoWidth'   : true, // keep this true
                             'sScrollX': '100%', // this too
-                            "lengthMenu": [[20, 40, 60, -1], [20, 40, 60, "All"]], // for number of items 
+                            "lengthMenu": [[20, 40, 60, -1], [20, 40, 60, "All"]], // for number of items
+                            'scrollX':        true, // for scrolling
+                            'crollCollapse': true,
       
                               'dom': 'Bfrtip', //export buttons
                               'buttons': [
