--- a/carrentalsystem/crcapp/templates/booking/order.html
+++ b/carrentalsystem/crcapp/templates/booking/order.html
@@ -9,27 +9,46 @@
 {% block content %}
 
 <table id="tbl" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%;">
-    <caption>A caption required for the table</caption>
   <thead>
   <tr>
-    <th>Store ID</th>
-    <th>Store Name</th>
-    <th>Store Phone</th>
-    <th>Street</th>
-    <th>City</th>
-    <th>State</th>
+    <th>Vehicle ID</th>
+    <th>Make Name</th>
+    <th>Model</th>
+    <th>Series</th>
+    <th>Year</th>
+    <th>New Price</th>
+    <th>enginesize</th>
+    <th>fuelSystem</th>
+    <th>tankcapacity</th>
+    <th>power</th>
+    <th>seatingCapacity</th>
+    <th>standardTransmission</th>
+    <th>bodyType</th>
+    <th>driveType</th>
+    <th>wheelbase</th>
+    <th>storeID</th>
   </tr>
   </thead>
   <tbody id="records">
         <!-- Iterating through the list passed from the view -->
-        {% for item in list %}
+        {% for vehicle in vehicles %}
         <tr>
-                <td class="pdttable">{{ item.storeID }}</td>
-                <td class="pdttable">{{ item.storeName }}</td>
-                <td class="pdttable">{{ item.storePhone }}</td>
-                <td class="pdttable">{{ item.street }}</td> 
-                <td class="pdttable">{{ item.city }}</td> 
-                <td class="pdttable">{{ item.state }}</td>                        
+                <td class="pdttable">{{ vehicle.vehicleID }}</td>
+                <td class="pdttable">{{ vehicle.makeName }}</td>
+                <td class="pdttable">{{ vehicle.model }}</td>
+                <td class="pdttable">{{ vehicle.series }}</td> 
+                <td class="pdttable">{{ vehicle.year }}</td> 
+                <td class="pdttable">{{ vehicle.newPrice }}</td>
+                <td class="pdttable">{{ vehicle.enginesize }}</td> 
+                <td class="pdttable">{{ vehicle.fuelSystem }}</td> 
+                <td class="pdttable">{{ vehicle.tankcapacity }}</td> 
+                <td class="pdttable">{{ vehicle.power }}</td> 
+                <td class="pdttable">{{ vehicle.seatingCapacity }}</td> 
+                <td class="pdttable">{{ vehicle.standardTransmission }}</td> 
+                <td class="pdttable">{{ vehicle.bodyType }}</td> 
+                <td class="pdttable">{{ vehicle.driveType }}</td> 
+                <td class="pdttable">{{ vehicle.wheelbase }}</td> 
+                <td class="pdttable">{{ vehicle.storeID }}</td> 
             </tr>
         {% endfor %}
      
@@ -38,12 +57,22 @@
   </tbody>
   <tfoot>
   <tr>
-    <th>Store ID</th>
-    <th>Store Name</th>
-    <th>Store Phone</th>
-    <th>Street</th>
-    <th>City</th>
-    <th>State</th>
+    <th>Vehicle ID</th>
+    <th>Make Name</th>
+    <th>Model</th>
+    <th>Series</th>
+    <th>Year</th>
+    <th>New Price</th>
+    <th>enginesize</th>
+    <th>fuelSystem</th>
+    <th>tankcapacity</th>
+    <th>power</th>
+    <th>seatingCapacity</th>
+    <th>standardTransmission</th>
+    <th>bodyType</th>
+    <th>driveType</th>
+    <th>wheelbase</th>
+    <th>storeID</th>
   </tr>
   </tfoot>
 </table>
@@ -55,13 +84,6 @@
         $(function () {
             // The tbl is the id value for the table
           $('#tbl').DataTable({
-                            columnDefs:[{
-                                name: 'Store ID',
-                                orderable: true,
-                                searchable: true,
-                                targets: [0]
-                            }
-                            ],    
                             'paging'      : true, // for pagination
                             'lengthChange': false,
                             'searching'   : true, //searching
@@ -69,7 +91,7 @@
                             'info'        : true,
                             'autoWidth'   : true, // keep this true
                             'sScrollX': '100%', // this too
-                            "lengthMenu": [[20, 40, 60, -1], [20, 40, 60, "All"]], // for number of items 
+                            "lengthMenu": [[20, 40, 60, -1], [20, 40, 60, "All"]], // for number of items
       
                               'dom': 'Bfrtip', //export buttons
                               'buttons': [
