--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -87,7 +87,7 @@
                 </a>
              </div>
              <div class="col-md-3 col-sm-6 text-center">
-                <a href="">
+                <a href="{% url 'customerModify' %}">
                    <i class="fas fa-edit" style="font-size:36px;"></i>
                    <br>
                    <p>Modify Customer</p>
