Staff Database Interface Done
View page.
Get all staff details in /staff.
Select staff member.
Populates the values and the save button.
Saves changes.

--- a/carrentalsystem/crcapp/templates/home.html
+++ b/carrentalsystem/crcapp/templates/home.html
@@ -87,13 +87,6 @@
                 </a>
              </div>
              <div class="col-md-3 col-sm-6 text-center">
-                <a href="">
-                   <i class="fas fa-edit" style="font-size:36px;"></i>
-                   <br>
-                   <p>Modify Customer</p>
-                </a>
-             </div>
-             <div class="col-md-3 col-sm-6 text-center">
                     <a href="">
                        <i class="fas fa-search" style="font-size:36px;"></i>
                        <br>
@@ -116,19 +109,13 @@
                 </a>
              </div>
              <div class="col-md-3 col-sm-6 text-center">
-                <a href="">
+                <a href="staff">
                    <i class="far fa-eye" style="font-size:36px;"></i>
                    <br>
                    <p>View Staff</p>
                 </a>
              </div>
-             <div class="col-md-3 col-sm-6 text-center">
-                <a href="">
-                   <i class="fas fa-edit" style="font-size:36px;"></i>
-                   <br>
-                   <p>Modify Staff</p>
-                </a>
-             </div>
+            
              <div class="col-md-3 col-sm-6 text-center">
                     <a href="staff/search">
                        <i class="fas fa-search" style="font-size:36px;"></i>
